k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dots-production
  labels:
    app: dots
    environment: production
