k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dots-ingress
  namespace: dots-production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dots.nixsupport.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dots-backend
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: dots-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dots-frontend
                port:
                  number: 80
